# yt-dlp-manager

./: LICENSE  README.md  main.py  pyproject.toml
src/yt_dlp_manager/: __init__.py  main.py
