[project]
name = "yt-dlp-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nick Sikkema", email = "contact@nicksikkema.com" }
]
requires-python = ">=3.13"
dependencies = [
    "yt-dlp~=2025.9.26",
]

[dependency-groups]
dev = [
    "ruff>=0.13.2",
]

[tool.ruff]
include = [
    "src/*.py",
    "src/**/*.py",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "UP",
    "B",
    "SIM",
    "I",
    "PL",
    "N",
    "RUF"
]
ignore = [
]

[project.scripts]
yt-dlp-manager = "yt_dlp_manager.main:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
